--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,8 @@ margin-left: 50px; /* Dịch sang phải 10px */
     </div>
     <div style="text-align: center;">
         Học lực: <span id="account-exp">0</span> điểm
-        Bạc: <span id="account-money">0</span> lượng
+        <br>
+        <img src="/hoctiengtrung/tuitien.png" width="14" height="14">: <span id="account-money">0</span> <img src="/hoctiengtrung/tien.svg" width="14" height="14">
     </div>
     <div style="display: flex; justify-content: center; align-items: center; gap: 10px;">
         <div style="text-align: center;">
@@ -1769,7 +1770,7 @@ function showLessonList() {
             <td>${lesson.bai}</td>
             <td>${lesson.name}</td>
             <td>${lesson.level_unlock}</td>
-            <td>${lesson.money_unlock} 🪙</td>
+            <td>${lesson.money_unlock} <img src="/hoctiengtrung/tien.svg" width="14" height="14"></td>
             <td>${status}</td>
         `;
 
