--- a/index.html
+++ b/index.html
@@ -1377,7 +1377,11 @@ margin-left: 50px; /* Dịch sang phải 10px */
     <div style="text-align: center;">
         Học lực: <span id="account-exp">0</span> điểm
         <br>
-        <img src="/hoctiengtrung/tuitien.png" width="14" height="14">: <span id="account-money">0</span> <img src="/hoctiengtrung/tien.svg" width="14" height="14">
+        <td style="white-space: nowrap;">
+  <img src="/hoctiengtrung/tuitien.png" width="35" height="35" alt="tuitien">: 
+  <span id="account-money">0</span>
+  <img src="/hoctiengtrung/tien.svg" width="35" height="35" alt="tien">
+</td>
     </div>
     <div style="display: flex; justify-content: center; align-items: center; gap: 10px;">
         <div style="text-align: center;">
