--- a/index.html
+++ b/index.html
@@ -1967,8 +1967,8 @@ document.getElementById('register-button').addEventListener('click', async () =>
         if (updateResponse.ok) {
             currentUser = newUser;
             document.getElementById('account-name').textContent = name;
-            document.getElementById('account-exp').textContent = EXP;
-            document.getElementById('account-money').textContent = money; // Hiển thị money mặc định
+            document.getElementById('account-exp').textContent = newUser.EXP;
+           document.getElementById('account-money').textContent = newUser.money;
             await loadLevelData();
             updateLevelInfo();
             earnedEXP = 0;
