--- a/index.html
+++ b/index.html
@@ -988,16 +988,21 @@ button3.read-complete-button:hover {
 }
 
 #account-info {
-    display: none; /* Ẩn mặc định, JavaScript sẽ bật khi cần */
+    display: none; /* Ẩn mặc định */
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
     font-size: 20px;
     gap: 10px;
-    position: absolute; /* Định vị cố định để đặt ở góc */
-    top: 20px; /* Cách đỉnh 20px */
-    right: 20px; /* Cách phải 20px */
-    z-index: 10; /* Đảm bảo nằm trên các phần tử khác */
+    position: absolute; /* Giữ absolute để dễ căn chỉnh */
+    top: 50px; /* Cách đỉnh màn hình, có thể điều chỉnh */
+    left: 50%; /* Đặt ở giữa theo chiều ngang */
+    transform: translateX(-50%); /* Dịch chuyển ngược 50% chiều rộng để căn giữa */
+    z-index: 100; /* Tăng z-index để tránh bị che */
+    width: auto; /* Đảm bảo không bị giãn quá rộng */
+    padding: 10px; /* Thêm padding để tránh sát mép */
+    background-color: rgba(255, 255, 255, 0.9); /* Nền mờ để dễ đọc */
+    border-radius: 10px; /* Bo góc cho đẹp */
 }
 
 /* Hiển thị khi màn hình phù hợp (nếu dùng class active) */
