--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ button2 {
 /* Nhóm 2: Màn hình chọn chế độ và khởi động */
 #mode-selection-screen {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 #mode-selection-screen button2.mode-button {
     font-size: 18px;
@@ -146,7 +146,7 @@ button2 {
 }
 #start-screen {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 #start-screen input {
     font-size: 20px;
@@ -995,6 +995,7 @@ button3.read-complete-button:hover {
     gap: 10px;
     width: auto;
     max-width: 300px; /* Giới hạn chiều rộng để không quá lớn */
+    margin: 0 auto 150px auto; /* Căn giữa ngang, cách dưới 150px */
     padding: 0px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
